--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     ],
     "require": {
         "php": ">=5.5",
-        "composer/installers": "~1.0",
-        "bower-asset/bulma": "^0.4.2"
+        "composer/installers": "~1.0"
     },
     "extra": {
         "installer-name": "hypeUI"
