--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
 		"grunt-git": "^0.3.5",
 		"grunt-sass": "^2.1.0",
 		"grunt-version": "^1.0.0",
-		"underscore": "^1.8.3"
+		"underscore": "^1.8.3",
+        "hoek": ">=4.2.1",
+        "minimatch": ">=3.0.2",
+        "lodash": ">=4.17.5",
+        "cryptiles": ">=4.1.2"
 	}
 }
